--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "semantic-ui-react": "^0.86.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
