--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "rechart": "^0.0.1",
     "recharts": "^1.5.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
   "devDependencies": {
